--- a/footer.html
+++ b/footer.html
@@ -1,1 +1,1 @@
-<p>Copyright &copy; 2023 Medes Datalab, Inc. All rights reserved.</p>
+<p>Copyright &copy; 2016 Skynet, Inc. All rights reserved.</p>
